--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "str"
-version = "1.2.2"
+version = "1.2.3"
 
 # Project metadata (fill or replace placeholders before publishing)
 description = "Unicode-aware string utilities for Gleam: grapheme-safe operations, pragmatic ASCII transliteration, and slug generation."
@@ -12,6 +12,8 @@ links = [{ title = "Repository", href = "https://github.com/lupodevelop/str" }]
 
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
+houdini = ">= 1.0.0 and < 2.0.0"
+odysseus = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
