Update .gitignore for benchmark and generated files
Added rules to ignore benchmark outputs, runtime files, and generated bench modules to prevent accidental commits of these files.

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,10 @@ tmp/
 
 ### user-specific files
 artifacts/
-benchmark/results/*
+
+### Benchmark outputs
+benchmark/results/
+benchmark/runtime/bench_beam/
+
+### Generated bench modules
+src/str/internal/generated_*_bench.gleam
